--- a/index.html
+++ b/index.html
@@ -560,12 +560,12 @@
                   </div>
                   <div class="skills-hero-education">
                     <div class="skills-hero-education-img">
-                      <img src="img/Java-Logo.png" alt="" width="120px" height="120px" />
+                      <img src="img/bootstrap.png" alt="" width="120px" height="120px" style="border-radius: 50%;"/>
                     </div>
                     <div class="year-education-hero">
-                      <span>40%</span>
-                      <h3><a href="#"> Java </a></h3>
-                      <p>Currently learning more concepts</p>
+                      <span>100%</span>
+                      <h3><a href="#"> Bootstarap </a></h3>
+                      <p>Responsive websites</p>
                     </div>
                   </div>
                   <div class="skills-hero-education">
