--- a/project.html
+++ b/project.html
@@ -459,7 +459,7 @@
                 </section>
                 <!-- contect section end -->
                 <!-- foter  -->
-                <footer>
+                <footer style="height: 10px;">
                     <div>© 2024 Code W☘️th Sky. All rights reserved.</div>
                 </footer>
                 <!-- foter  -->
